Fixes a layout bug that was causing every .unit-1-2 to clear: left.

--- a/sass/atoms/_grid.scss
+++ b/sass/atoms/_grid.scss
@@ -19,6 +19,7 @@
 .unit-1-3,  // Switches from a one- to a three-column layout.
 .unit-1-3-alt,  // Switches up from a one- to a two- and then to a three-column layout.
 .unit-2-3,
+.unit-1-2,
 .unit-1-1{
     margin: 0 2%;
 }
@@ -34,17 +35,20 @@
 .unit-1-1{
 	@media screen and (min-width: 43em){
 		//box model
-		margin: 0 2%;
 		width: 96%;
 		//layout
 		clear: left;
-		//display
 		float: left;
 	}
 }
 
 .unit-1-2{
-	@media screen and (min-width: 43em){
+	//box model
+	width: 96%;
+	//layout
+	float: left;
+	
+	@media screen and (min-width: 32em){
 		//box model
 		margin: 0 2%;
 		width: 46%;
